# open-motion-apis

./: README.md  pyproject.toml
docker/: Dockerfile.api  docker-compose.yml
eval/: README.md  metrics.py
examples/: README.md  basic_generate.py  rl_reward_loop.py
motion_api/: README.md  __init__.py  client.py  config.py  schemas.py  server_base.py  utils.py
motion_api/backends/: mdm_server.py  mld_server.py  momask_server.py  t2m_gpt_server.py
motion_store/: README.md  server.py
scripts/: start_all.sh
tests/: test_api.py
