[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "open-motion-apis"
version = "0.1.0"
description = "Unified OpenAI-style serving layer for text-to-motion models"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.100",
    "uvicorn[standard]>=0.22",
    "pydantic>=2.0",
    "numpy>=1.24",
    "requests>=2.28",
]

[project.optional-dependencies]
eval = ["scipy>=1.10"]
dev  = ["pytest>=7", "httpx>=0.24"]

[tool.setuptools.packages.find]
where = ["."]
include = ["motion_api*", "motion_store*", "eval*"]
